saints-xctf-com-api/modules/kubernetes/k8s-config/service.yaml
# Kubernetes NodePort service for the SaintsXCTF API application.
# Author: Andrew Jarombek
# Date: 7/20/2020

apiVersion: v1
kind: Service
metadata:
  name: saints-xctf-api
  namespace: saints-xctf
  labels:
    version: v1.0.0
    environment: production
    application: saints-xctf-api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    application: saints-xctf-api

---

apiVersion: v1
kind: Service
metadata:
  name: saints-xctf-api-flask
  namespace: saints-xctf
  labels:
    version: v1.0.0
    environment: production
    application: saints-xctf-api
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    application: saints-xctf-api
